<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/studiesBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/studies" />
    
    <Button
        android:id="@+id/tasksBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks" />
    
    <Button
        android:id="@+id/syncBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync" />
    
    <Button
        android:id="@+id/prefBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs" />

</LinearLayout>